# sov-rollup-starter

./: .gitignore  .gitmodules  Cargo.toml  README.md  celestia_rollup_config.toml  constants.json  flake.nix  mock_rollup_config.toml  rollup_config.toml  sov-rollup-starter.sh
.github/workflows/: nix.yaml  rust.yaml  rust.yml
crates/iphone-signatures-context/: Cargo.toml
crates/iphone-signatures-context/src/: lib.rs  pub_key_hex.rs  secp256r1_signature.rs  serde_pub_key.rs
crates/provers/risc0/: Cargo.toml  build.rs
crates/provers/risc0/guest-celestia/: Cargo.toml
crates/provers/risc0/guest-mock/: Cargo.toml
crates/rollup/: Cargo.toml  Makefile  rollup_config_0.toml
crates/rollup/src/: celestia_rollup.rs  lib.rs  mock_rollup.rs
crates/rollup/tests/: test_helpers.rs
crates/rollup/tests/bank/: mod.rs
crates/secp256r1-context/: Cargo.toml
crates/secp256r1-context/src/: lib.rs  pub_key_hex.rs  secp256r1_context.rs  secp256r1_signature.rs
crates/stf/: Cargo.toml
crates/stf/src/: genesis_config.rs  hooks.rs  lib.rs  runtime.rs
docker/: generate_configs.sh  rollup_config_0.toml  run-validator.sh  template.toml
docker/credentials/: bridge-0.jwt
nix/: celestia-app.nix  celestia-node.nix  gaia.nix  risc0.nix  rollup.nix
test-data/genesis/celestia/: accounts.json  sequencer_registry.json
test-data/genesis/mock/: chain_state.json
test-data/keys/: token_deployer_private_key_iphone.json
test-data/requests/: create_token_iphone.json
