[workspace]

resolver = "2"

members = [
    "crates/rollup",
    "crates/stf",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Informal Systems <hello@informal.systems>", "Sovereign Labs <info@sovereign.xyz>"]
publish = false
rust-version = "1.75"

[workspace.dependencies]
sov-modules-api                 = { path = "./sovereign-sdk" }
sov-state                       = { path = "./sovereign-sdk" }
sov-accounts                    = { path = "./sovereign-sdk" }
sov-bank                        = { path = "./sovereign-sdk" }
sov-ledger-rpc                  = { path = "./sovereign-sdk" }
sov-sequencer-registry          = { path = "./sovereign-sdk" }
sov-modules-stf-blueprint       = { path = "./sovereign-sdk" }
sov-modules-rollup-blueprint    = { path = "./sovereign-sdk" }
sov-stf-runner                  = { path = "./sovereign-sdk" }
sov-db                          = { path = "./sovereign-sdk" }
sov-sequencer                   = { path = "./sovereign-sdk" }
sov-rollup-interface            = { path = "./sovereign-sdk" }
sov-risc0-adapter               = { path = "./sovereign-sdk" }
sov-first-read-last-write-cache = { path = "./sovereign-sdk" }
sov-cli                         = { path = "./sovereign-sdk" }
sov-mock-da                     = { path = "./sovereign-sdk" }
sov-celestia-adapter            = { path = "./sovereign-sdk" }
sov-prover-storage-manager      = { path = "./sovereign-sdk" }

sov-ibc                         = { git = "https://github.com/informalsystems/sovereign-ibc.git", rev = "5e74309" }
sov-ibc-transfer                = { git = "https://github.com/informalsystems/sovereign-ibc.git", rev = "5e74309" }

stf-starter = { path = "./crates/stf" }

serde = { version = "1.0.196", features = ["derive", "rc"] }
serde_json = { version = "1.0" }

anyhow = "1.0.68"
clap = { version = "4.4.10", features = ["derive"] }
async-trait = "0.1.71"
borsh = { version = "0.10.3", features = ["rc", "bytes"] }
tracing = "0.1.40"
tokio = { version = "1", features = ["full"] }
tempfile = "3.5"
jsonrpsee = { version = "0.20.1", features = ["jsonrpsee-types"] }

risc0-build = "0.19"

[patch.crates-io]
# To apply the v0.19 build script downlaod issue hotfix.
risc0-circuit-recursion = { git = "https://github.com/neysofu/risc0-hotfixes", rev = "v0.19.2-hotfix" }
risc0-zkvm = { git = "https://github.com/neysofu/risc0-hotfixes", rev = "v0.19.2-hotfix" }
risc0-zkvm-platform = { git = "https://github.com/neysofu/risc0-hotfixes", rev = "v0.19.2-hotfix" }
risc0-circuit-rv32im = { git = "https://github.com/neysofu/risc0-hotfixes", rev = "v0.19.2-hotfix" }
risc0-binfmt = { git = "https://github.com/neysofu/risc0-hotfixes", rev = "v0.19.2-hotfix" }
risc0-core = { git = "https://github.com/neysofu/risc0-hotfixes", rev = "v0.19.2-hotfix" }
risc0-zkp = { git = "https://github.com/neysofu/risc0-hotfixes", rev = "v0.19.2-hotfix" }
bonsai-sdk = { git = "https://github.com/neysofu/risc0-hotfixes", rev = "v0.19.2-hotfix" }
