[workspace]

resolver = "2"

members = [
    "crates/rollup",
    "crates/stf",
]

exclude = [
    "sovereign-sdk"
]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Informal Systems <hello@informal.systems>", "Sovereign Labs <info@sovereign.xyz>"]
publish = false
rust-version = "1.75"

[workspace.dependencies]
sov-modules-api                 = { path = "./sovereign-sdk/module-system/sov-modules-api" }
sov-state                       = { path = "./sovereign-sdk/module-system/sov-state" }
sov-accounts                    = { path = "./sovereign-sdk/module-system/module-implementations/sov-accounts" }
sov-bank                        = { path = "./sovereign-sdk/module-system/module-implementations/sov-bank" }
sov-ledger-rpc                  = { path = "./sovereign-sdk/full-node/sov-ledger-rpc" }
sov-sequencer-registry          = { path = "./sovereign-sdk/module-system/module-implementations/sov-sequencer-registry" }
sov-modules-stf-blueprint       = { path = "./sovereign-sdk/module-system/sov-modules-stf-blueprint" }
sov-modules-rollup-blueprint    = { path = "./sovereign-sdk/module-system/sov-modules-rollup-blueprint" }
sov-stf-runner                  = { path = "./sovereign-sdk/full-node/sov-stf-runner" }
sov-db                          = { path = "./sovereign-sdk/full-node/db/sov-db" }
sov-sequencer                   = { path = "./sovereign-sdk/full-node/sov-sequencer" }
sov-rollup-interface            = { path = "./sovereign-sdk/rollup-interface" }
sov-risc0-adapter               = { path = "./sovereign-sdk/adapters/risc0" }
sov-cli                         = { path = "./sovereign-sdk/module-system/sov-cli" }
sov-mock-da                     = { path = "./sovereign-sdk/adapters/mock-da" }
sov-celestia-adapter            = { path = "./sovereign-sdk/adapters/celestia" }
sov-prover-storage-manager      = { path = "./sovereign-sdk/full-node/sov-prover-storage-manager" }

sov-ibc                         = { git = "https://github.com/informalsystems/sovereign-ibc.git", rev = "5e74309" }
sov-ibc-transfer                = { git = "https://github.com/informalsystems/sovereign-ibc.git", rev = "5e74309" }

stf-starter = { path = "./crates/stf" }

serde = { version = "1.0.196", features = ["derive", "rc"] }
serde_json = { version = "1.0" }

anyhow = "1.0.68"
clap = { version = "4.4.10", features = ["derive"] }
async-trait = "0.1.71"
borsh = { version = "0.10.3", features = ["rc", "bytes"] }
tracing = "0.1.40"
tokio = { version = "1", features = ["full"] }
tempfile = "3.5"
jsonrpsee = { version = "0.20.1", features = ["jsonrpsee-types"] }

risc0-build = "0.19"

[patch.crates-io]
# To apply the v0.19 build script downlaod issue hotfix.
risc0-circuit-recursion = { git = "https://github.com/neysofu/risc0-hotfixes", rev = "v0.19.2-hotfix" }
risc0-zkvm = { git = "https://github.com/neysofu/risc0-hotfixes", rev = "v0.19.2-hotfix" }
risc0-zkvm-platform = { git = "https://github.com/neysofu/risc0-hotfixes", rev = "v0.19.2-hotfix" }
risc0-circuit-rv32im = { git = "https://github.com/neysofu/risc0-hotfixes", rev = "v0.19.2-hotfix" }
risc0-binfmt = { git = "https://github.com/neysofu/risc0-hotfixes", rev = "v0.19.2-hotfix" }
risc0-core = { git = "https://github.com/neysofu/risc0-hotfixes", rev = "v0.19.2-hotfix" }
risc0-zkp = { git = "https://github.com/neysofu/risc0-hotfixes", rev = "v0.19.2-hotfix" }
bonsai-sdk = { git = "https://github.com/neysofu/risc0-hotfixes", rev = "v0.19.2-hotfix" }
