[workspace]

resolver = "2"

members = [
    "crates/rollup",
    "crates/stf",
]

exclude = [
    "vendor/sovereign-sdk",
    "vendor/risc0-cycle-macros"
]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Informal Systems <hello@informal.systems>", "Sovereign Labs <info@sovereign.xyz>"]
publish = false
rust-version = "1.73"

[workspace.dependencies]
sov-modules-api                 = { path = "./vendor/sovereign-sdk/module-system/sov-modules-api" }
sov-state                       = { path = "./vendor/sovereign-sdk/module-system/sov-state" }
sov-accounts                    = { path = "./vendor/sovereign-sdk/module-system/module-implementations/sov-accounts" }
sov-bank                        = { path = "./vendor/sovereign-sdk/module-system/module-implementations/sov-bank" }
sov-ledger-rpc                  = { path = "./vendor/sovereign-sdk/full-node/sov-ledger-rpc" }
sov-sequencer-registry          = { path = "./vendor/sovereign-sdk/module-system/module-implementations/sov-sequencer-registry" }
sov-modules-stf-blueprint       = { path = "./vendor/sovereign-sdk/module-system/sov-modules-stf-blueprint" }
sov-modules-rollup-blueprint    = { path = "./vendor/sovereign-sdk/module-system/sov-modules-rollup-blueprint" }
sov-stf-runner                  = { path = "./vendor/sovereign-sdk/full-node/sov-stf-runner" }
sov-db                          = { path = "./vendor/sovereign-sdk/full-node/db/sov-db" }
sov-sequencer                   = { path = "./vendor/sovereign-sdk/full-node/sov-sequencer" }
sov-rollup-interface            = { path = "./vendor/sovereign-sdk/rollup-interface" }
sov-risc0-adapter               = { path = "./vendor/sovereign-sdk/adapters/risc0" }
sov-cli                         = { path = "./vendor/sovereign-sdk/module-system/sov-cli" }
sov-mock-da                     = { path = "./vendor/sovereign-sdk/adapters/mock-da" }
sov-celestia-adapter            = { path = "./vendor/sovereign-sdk/adapters/celestia" }
sov-prover-storage-manager      = { path = "./vendor/sovereign-sdk/full-node/sov-prover-storage-manager" }
sov-mock-zkvm                   = { path = "./vendor/sovereign-sdk/adapters/mock-zkvm" }

sov-ibc                         = { git = "https://github.com/informalsystems/sovereign-ibc.git", rev = "e67de8" }
sov-ibc-transfer                = { git = "https://github.com/informalsystems/sovereign-ibc.git", rev = "e67de8" }

stf-starter = { path = "./crates/stf" }

serde = { version = "1.0.196", features = ["derive", "rc"] }
serde_json = { version = "1.0" }

anyhow = "1.0.68"
clap = { version = "4.4.10", features = ["derive"] }
async-trait = "0.1.71"
borsh = { version = "0.10.3", features = ["rc", "bytes"] }
tracing = "0.1.40"
tokio = { version = "1", features = ["full"] }
tempfile = "3.5"
jsonrpsee = { version = "0.20.1", features = ["jsonrpsee-types"] }

risc0-build = "0.20"

[patch.'ssh://git@github.com/informalsystems/sovereign-sdk-wip.git']
sov-modules-api      = { path = "./vendor/sovereign-sdk/module-system/sov-modules-api" }
sov-state            = { path = "./vendor/sovereign-sdk/module-system/sov-state" }
sov-bank             = { path = "./vendor/sovereign-sdk/module-system/module-implementations/sov-bank" }
sov-chain-state      = { path = "./vendor/sovereign-sdk/module-system/module-implementations/sov-chain-state" }
sov-rollup-interface = { path = "./vendor/sovereign-sdk/rollup-interface" }

[patch.'https://github.com/Sovereign-Labs/risc0-cycle-macros.git']
risc0-cycle-utils    = { path = "./vendor/risc0-cycle-macros/crates/utils" }
