[package]
name = "sov-demo-prover-guest-celestia"
version = "0.3.0"
edition = "2021"
resolver = "2"

[workspace]

[dependencies]
anyhow = "1.0.68"
risc0-zkvm = { version = "0.19", default-features = false, features = ["std"] }
risc0-zkvm-platform = "0.19"

stf-starter = { path = "../../../stf" }

sov-rollup-interface            = { path = "../../../../sovereign-sdk/rollup-interface" }
sov-celestia-adapter            = { path = "../../../../sovereign-sdk/adapters/celestia" }
sov-modules-api                 = { path = "../../../../sovereign-sdk/module-system/sov-modules-api" }
sov-modules-stf-blueprint       = { path = "../../../../sovereign-sdk/module-system/sov-modules-stf-blueprint" }
sov-risc0-adapter               = { path = "../../../../sovereign-sdk/adapters/risc0" }
sov-state                       = { path = "../../../../sovereign-sdk/module-system/sov-state" }

[patch.crates-io]
# Uncomment to apply the v0.19 build script downlaod issue hotfix.
risc0-circuit-recursion = { git = "https://github.com/neysofu/risc0-hotfixes", rev = "v0.19.2-hotfix" }
risc0-zkvm = { git = "https://github.com/neysofu/risc0-hotfixes", rev = "v0.19.2-hotfix" }
risc0-zkvm-platform = { git = "https://github.com/neysofu/risc0-hotfixes", rev = "v0.19.2-hotfix" }
risc0-circuit-rv32im = { git = "https://github.com/neysofu/risc0-hotfixes", rev = "v0.19.2-hotfix" }

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3
