[workspace]

[package]
name = "guest-mock-starter"
version = "0.3.0"
edition = "2021"
resolver = "2"

[dependencies]
anyhow = "1.0.68"
ahash = "=0.8.6" # Force ahash to an old version to prevent build issues: https://github.com/risc0/risc0/issues/1406. This can be removed once risc0 updates to rust 1.72
time-macros = "=0.2.15"
risc0-zkvm = { version = "0.19", default-features = false, features = ["std"] }
risc0-zkvm-platform = "0.19"

serde = { version = "1.0.188", features = ["derive", "rc"] }


sov-rollup-interface            = { path = "../../../../vendor/sovereign-sdk/rollup-interface" }
sov-mock-da                     = { path = "../../../../vendor/sovereign-sdk/adapters/mock-da" }
sov-modules-api                 = { path = "../../../../vendor/sovereign-sdk/module-system/sov-modules-api" }
sov-modules-stf-blueprint       = { path = "../../../../vendor/sovereign-sdk/module-system/sov-modules-stf-blueprint" }
sov-risc0-adapter               = { path = "../../../../vendor/sovereign-sdk/adapters/risc0" }
sov-state                       = { path = "../../../../vendor/sovereign-sdk/module-system/sov-state" }

stf-starter = { path = "../../../stf" }

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
ed25519-dalek = { git = "https://github.com/risc0/curve25519-dalek", tag = "curve25519-4.1.0-risczero.1" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.2-risc0" }

# Uncomment to apply the v0.19 build script downlaod issue hotfix.
risc0-circuit-recursion = { git = "https://github.com/neysofu/risc0-hotfixes", rev = "v0.19.2-hotfix" }
risc0-zkvm = { git = "https://github.com/neysofu/risc0-hotfixes", rev = "v0.19.2-hotfix" }
risc0-zkvm-platform = { git = "https://github.com/neysofu/risc0-hotfixes", rev = "v0.19.2-hotfix" }
risc0-circuit-rv32im = { git = "https://github.com/neysofu/risc0-hotfixes", rev = "v0.19.2-hotfix" }

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3
